--- a/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
@@ -13,6 +13,7 @@
         <Grid.Resources>
 
             <viewModel:AllOrdersViewModel x:Key="AllOrdersViewModel"/>
+            <viewModel:OrdersByPeriodViewModel x:Key="OrdersByPeriodViewModel"/>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="Height" Value="30"/>
@@ -83,13 +84,25 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock x:Name="tbHeader"
-                   Grid.Row="0"
-                   Grid.ColumnSpan="2"
-                   Text="All Orders"
+        <StackPanel x:Name="spHeaders"
+                    Grid.Row="0"
+                    Orientation="Horizontal">
+
+            <TextBlock x:Name="tbHeader"
+                   Text="Orders by :"
                    FontSize="24"
                    Margin="25 20 0 20">
-        </TextBlock>
+            </TextBlock>
+
+            <TextBlock x:Name="tbHeaderPeriod"
+                   Text="{Binding PeriodName, 
+                          Source={StaticResource AllOrdersViewModel}}"
+                   FontSize="24"
+                   Margin="5 20 0 20"
+                   HorizontalAlignment="Left">
+            </TextBlock>
+
+        </StackPanel>
 
         <StackPanel x:Name="spOrdersByPeriod"
                     Grid.Row="1"
@@ -103,7 +116,10 @@
                 Content="Today"
                 Margin="20 0 0 0"
                 ToolTip="Orders for Today"
-                Style="{StaticResource ButtonStyle}">
+                Style="{StaticResource ButtonStyle}"
+                Command="{Binding ShowOrdersByPeriodCommand, 
+                Source={StaticResource OrdersByPeriodViewModel}}"
+                CommandParameter="{Binding Name, ElementName=btnToday}">
             </Button>
 
             <Button x:Name="btnYesterday"
@@ -142,7 +158,6 @@
                         Padding="0 5 0 5">
                 <DatePicker.Resources>
                     <Style TargetType="DatePickerTextBox">
-                        <Setter Property="Text" Value=" Date from"/>
                         <Setter Property="IsReadOnly" Value="True"/>
                         <Setter Property="Focusable" Value="False"/>
                         <Setter Property="Control.Template">
@@ -184,7 +199,6 @@
                         Padding="0 5 0 5">
                 <DatePicker.Resources>
                     <Style TargetType="DatePickerTextBox">
-                        <Setter Property="Text" Value=" Date to"/>
                         <Setter Property="IsReadOnly" Value="True"/>
                         <Setter Property="Focusable" Value="False"/>
                         <Setter Property="Control.Template">
@@ -213,28 +227,39 @@
 
         </StackPanel>
 
-        <TextBlock x:Name="tbOrdersCount"
-                   Grid.Row="2"
-                   Grid.Column="0"
+        <StackPanel x:Name="spCount"
+                    Grid.Row="2"
+                    Margin="25 10 0 0"
+                    Orientation="Horizontal">
+
+            <TextBlock x:Name="tbOrdersCountText"
+                   Text="Orders Count : "
+                   FontSize="20"
+                   VerticalAlignment="Center">
+            </TextBlock>
+
+            <TextBlock x:Name="tbOrdersCount"
                    Text="{Binding OrdersCount, 
             Source={StaticResource AllOrdersViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                    FontSize="20"
-                   Margin="25 10 0 0"
-                   VerticalAlignment="Center">
-
-        </TextBlock>
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left">
+            </TextBlock>
+        </StackPanel>
 
         <DataGrid x:Name="dgOrders"
                   Grid.Row="3"
                   Grid.ColumnSpan="2"
                   Width="600"
+                  Height="400"
                   Padding="10 0 10 20"
                   Background="Transparent"
                   BorderBrush="Transparent"
                   BorderThickness="0 1 0 0"
                   HorizontalAlignment="Center"
                   HorizontalContentAlignment="Center"
+                  VerticalScrollBarVisibility="Auto"
                   CanUserAddRows="false" 
                   LoadingRow="DataGrid_LoadingRow"
                   ItemsSource="{Binding Orders, 
