--- a/MyFlatWPF/View/ManagementView/OrdersByPeriodView.xaml
+++ b/MyFlatWPF/View/ManagementView/OrdersByPeriodView.xaml
@@ -95,7 +95,8 @@
 
             <TextBlock x:Name="tbHeaderPeriod"
                    Text="{Binding PeriodName, 
-                          Source={StaticResource OrdersByPeriodViewModel}}"
+                          Source={StaticResource OrdersByPeriodViewModel},
+                          UpdateSourceTrigger=PropertyChanged}"
                    FontSize="24"
                    Margin="5 20 0 20"
                    HorizontalAlignment="Left">
@@ -260,7 +261,6 @@
             Source={StaticResource OrdersByPeriodViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                    FontSize="20"
-                   Width="20"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Left">
             </TextBlock>
