Add VerticalScrollBarVisibility AllOrdersView

--- a/MyFlatWPF/View/ManagementView/OrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/OrdersView.xaml
@@ -83,12 +83,14 @@
                   Grid.Row="2"
                   Grid.ColumnSpan="2"
                   Width="600"
+                  Height="450"
                   Padding="10 0 10 20"
                   Background="Transparent"
                   BorderBrush="Transparent"
                   BorderThickness="0 1 0 0"
                   HorizontalAlignment="Center"
                   HorizontalContentAlignment="Center"
+                  VerticalScrollBarVisibility="Auto"
                   CanUserAddRows="false" 
                   LoadingRow="DataGrid_LoadingRow"
                   ItemsSource="{Binding Orders, 
