--- a/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
@@ -12,7 +12,7 @@
 
         <Grid.Resources>
 
-            <viewModel:AllOrdersViewModel x:Key="AllOrdersViewModel"/>
+            <!--<viewModel:AllOrdersViewModel x:Key="AllOrdersViewModel"/>-->
             <viewModel:OrdersByPeriodViewModel x:Key="OrdersByPeriodViewModel"/>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
@@ -96,7 +96,7 @@
 
             <TextBlock x:Name="tbHeaderPeriod"
                    Text="{Binding PeriodName, 
-                          Source={StaticResource AllOrdersViewModel}}"
+                          Source={StaticResource OrdersByPeriodViewModel}}"
                    FontSize="24"
                    Margin="5 20 0 20"
                    HorizontalAlignment="Left">
@@ -159,7 +159,7 @@
                 Style="{StaticResource ButtonByPeriodStyle}"
                 Command="{Binding ShowOrdersByPeriodCommand, 
                 Source={StaticResource OrdersByPeriodViewModel}}"
-                CommandParameter="{Binding Name, ElementName=btnPeriod}">
+                CommandParameter="{Binding Name, ElementName=btnByPeriod}">
             </Button>
 
             <DatePicker x:Name="dpDateFrom" 
@@ -252,7 +252,7 @@
 
             <TextBlock x:Name="tbOrdersCount"
                    Text="{Binding OrdersCount, 
-            Source={StaticResource AllOrdersViewModel},
+            Source={StaticResource OrdersByPeriodViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                    FontSize="20"
                    VerticalAlignment="Center"
@@ -275,7 +275,7 @@
                   CanUserAddRows="false" 
                   LoadingRow="DataGrid_LoadingRow"
                   ItemsSource="{Binding Orders, 
-            Source={StaticResource AllOrdersViewModel},
+            Source={StaticResource OrdersByPeriodViewModel},
             UpdateSourceTrigger=PropertyChanged}"
                   AutoGenerateColumns="False"
                   Margin="0 10 0 20">
@@ -464,9 +464,9 @@
                                       BorderBrush="Transparent"
                                       BorderThickness="0 0 0 0"
                                 ItemsSource="{Binding StatusNames, 
-                                Source={StaticResource AllOrdersViewModel}}"
+                                Source={StaticResource OrdersByPeriodViewModel}}"
                               SelectedItem="{Binding StatusName}"
-                                      SelectionChanged="Cb_SelectionChanged"/>
+                              SelectionChanged="Cb_SelectionChanged"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
