--- a/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
@@ -152,14 +152,14 @@
                 CommandParameter="{Binding Name, ElementName=btnMonth}">
             </Button>
 
-            <Button x:Name="btnByPeriod"
+            <Button x:Name="btnPeriod"
                 Width="80"
                 Content="Period from"
                 ToolTip="Orders by Period"
                 Style="{StaticResource ButtonByPeriodStyle}"
                 Command="{Binding ShowOrdersByPeriodCommand, 
                 Source={StaticResource OrdersByPeriodViewModel}}"
-                CommandParameter="{Binding Name, ElementName=btnByPeriod}">
+                CommandParameter="{Binding Name, ElementName=btnPeriod}">
             </Button>
 
             <DatePicker x:Name="dpDateFrom" 
