--- a/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
+++ b/MyFlatWPF/View/ManagementView/AllOrdersView.xaml
@@ -76,6 +76,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="15*"/>
+            <RowDefinition Height="4*"/>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="10*"/>
             <RowDefinition Height="140*"/>
@@ -86,26 +87,34 @@
 
         <StackPanel x:Name="spHeaders"
                     Grid.Row="0"
+                    Margin="25 20 0 10"
                     Orientation="Horizontal">
 
             <TextBlock x:Name="tbHeader"
                    Text="Orders by :"
-                   FontSize="24"
-                   Margin="25 20 0 20">
+                   FontSize="24">
             </TextBlock>
 
             <TextBlock x:Name="tbHeaderPeriod"
                    Text="{Binding PeriodName, 
                           Source={StaticResource OrdersByPeriodViewModel}}"
                    FontSize="24"
-                   Margin="5 20 0 20"
+                   Margin="5 0 0 0"
                    HorizontalAlignment="Left">
             </TextBlock>
 
         </StackPanel>
 
+        <TextBlock x:Name="tbErrorPeriod"
+                   Grid.Row="1"
+                   Grid.ColumnSpan="2"
+                   FontSize="12"
+                   Margin="0 0 30 0"
+                   HorizontalAlignment="Right">
+        </TextBlock>
+
         <StackPanel x:Name="spOrdersByPeriod"
-                    Grid.Row="1"
+                    Grid.Row="2"
                     Grid.ColumnSpan="2"
                     Orientation="Horizontal"
                     VerticalAlignment="Center"
@@ -240,7 +249,7 @@
         </StackPanel>
 
         <StackPanel x:Name="spCount"
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Margin="25 10 0 0"
                     Orientation="Horizontal">
 
@@ -261,7 +270,7 @@
         </StackPanel>
 
         <DataGrid x:Name="dgOrders"
-                  Grid.Row="3"
+                  Grid.Row="4"
                   Grid.ColumnSpan="2"
                   Width="600"
                   Height="450"
