--- a/MyFlatWPF/View/ManagementWindow.xaml
+++ b/MyFlatWPF/View/ManagementWindow.xaml
@@ -172,12 +172,15 @@
                 </Expander>
 
                 <Border BorderThickness="0 0 0 0">
-                    <Button x:Name="btnHome"
+                    <Button x:Name="btnHomeEdit"
                         Content="Home"
                         Margin="0 10 0 0"
                         Style="{StaticResource ButtonStyle}"
                         MouseEnter="btn_mouseEnter"
-                        MouseLeave="btn_mouseLeave">
+                        MouseLeave="btn_mouseLeave"
+                        Command="{Binding SwitchManagementView, 
+                                  Source={StaticResource ManagementWindowViewModel}}"
+                        CommandParameter="{Binding Name, ElementName=btnHome}">
                     </Button>
                 </Border>
 
