--- a/MyFlatWPF/View/ManagementView/HomeEditView.xaml
+++ b/MyFlatWPF/View/ManagementView/HomeEditView.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" 
              d:DesignWidth="600">
-    
+
     <Grid x:Name="gHomeEdit"
           Margin="10 0 10 0">
 
@@ -68,6 +68,7 @@
             </Style>
 
             <Style x:Key="InputTextBox" TargetType="TextBox">
+                <Setter Property="Padding" Value="0"/>
                 <Setter Property="BorderBrush" Value="LightGray"/>
                 <Setter Property="BorderThickness" Value="0.75"/>
                 <Setter Property="Template">
@@ -107,248 +108,256 @@
         </Grid.Resources>
 
         <Grid.RowDefinitions>
-                    <RowDefinition Height="6*"/>
-                    <RowDefinition Height="0.5*"/>
-                    <RowDefinition Height="20*"/>
-                    <RowDefinition Height="0.5*"/>
-                    <RowDefinition Height="30*"/>
-                    <RowDefinition Height="0.5*"/>
-                    <RowDefinition Height="30*"/>
-                    <RowDefinition Height="0.5*"/>
-                    <RowDefinition Height="40*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                </Grid.ColumnDefinitions>
+            <RowDefinition Height="6*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="20*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="40*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
 
-                <TextBlock x:Name="tbHeader"
+        <TextBlock x:Name="tbHeader"
                            Grid.ColumnSpan="2"
                    Text="Changable fields on the home page"
                    FontSize="20"
                            Margin="0 5 0 5">
 
-                </TextBlock>
+        </TextBlock>
 
-                <Border Grid.Row="1"
+        <Border Grid.Row="1"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource BorderStyle}"></Border>
 
-                <StackPanel x:Name="spTopMenuEdit"
+        <StackPanel x:Name="spTopMenuEdit"
                     Grid.Row="2"
                     Grid.ColumnSpan="2"
                     Margin="0 2 0 5"
                     HorizontalAlignment="Left"
                     Orientation="Vertical">
 
-                    <TextBlock x:Name="tbHeaderTopMenu"
+            <TextBlock x:Name="tbHeaderTopMenu"
                                Text="Top menu links"
                                FontSize="16"
                                Margin="0 0 0 2">
 
-                    </TextBlock>
+            </TextBlock>
 
-                    <WrapPanel x:Name="wpTopMenuLinks">
+            <WrapPanel x:Name="wpTopMenuLinks">
 
-                    </WrapPanel>
+            </WrapPanel>
 
-                </StackPanel>
+        </StackPanel>
 
-                <Border Grid.Row="3"
+        <Border Grid.Row="3"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource BorderStyle}"></Border>
 
-                <StackPanel x:Name="spRandomPhraseEdit"
+        <StackPanel x:Name="spRandomPhraseEdit"
                     Grid.Row="4"
                     Grid.ColumnSpan="2"
-                    Margin="0 5 0 0"
+                    Margin="0 0 0 0"
                     HorizontalAlignment="Left"
                     Orientation="Vertical">
 
-                    <TextBlock x:Name="tbHeaderRandomPhrase"
-                               Text="Random Phrase"
+            <TextBlock x:Name="tbHeaderRandomPhrase"
+                               Text="Random Phrases"
                                FontSize="16"
                                Margin="0 0 0 0">
 
-                    </TextBlock>
+            </TextBlock>
 
-                    <TextBlock x:Name="tbAddRandomPhrase"
+            <StackPanel x:Name="spInputPhrase"
+                                Orientation="Horizontal"
+                                Margin="0 5 0 0">
+
+                <TextBlock x:Name="tbAddRandomPhrase"
                                Text="Add Phrase"
                                FontSize="16"
                                Margin="0 0 0 0">
-                    </TextBlock>
+                </TextBlock>
 
-                    <StackPanel x:Name="spInputPhrase"
-                                Orientation="Horizontal"
-                                Margin="0 5 0 0">
-                        
-                        <TextBox x:Name="tbInputPhrase"
-                                 Width="150"
-                             FontSize="12">
-                        </TextBox>
+                <TextBox x:Name="tbInputPhrase"
+                                 Width="140"
+                                 Height="18"
+                             FontSize="12"
+                                 Margin="5 0 0 0"
+                             Style="{StaticResource InputTextBox}">
+                </TextBox>
 
-                        <Button x:Name="btnAddPhrase"
+                <Button x:Name="btnAddPhrase"
                                 Content="+"
                                 Margin="10 0 0 0"
                                 FontWeight="DemiBold"
                                 ToolTip="Add phrase"
                                 Style="{StaticResource ButtonCircleStyle}">
-                        </Button>
+                </Button>
 
-                    </StackPanel>
+            </StackPanel>
 
-                    <WrapPanel x:Name="wpRandomPhrases"
+            <WrapPanel x:Name="wpRandomPhrases"
                                 Margin="0 5 0 0">
 
-                    </WrapPanel>
+            </WrapPanel>
 
-                </StackPanel>
+        </StackPanel>
 
-                <Border Grid.Row="5"
+        <Border Grid.Row="5"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource BorderStyle}"></Border>
 
-                <StackPanel x:Name="spCentralArea"
+        <StackPanel x:Name="spCentralArea"
                             Grid.Row="6"
                             Grid.Column="0"
                             Orientation="Vertical">
 
-                    <TextBlock x:Name="tbHeaderCentralArea"
+            <TextBlock x:Name="tbHeaderCentralArea"
                                Text="Central area left side text"
                                FontSize="16"
-                               Margin="0 5 0 0">
+                               Margin="0 0 0 0">
 
-                    </TextBlock>
+            </TextBlock>
 
-                    <StackPanel x:Name="spInputHeaderCentralArea"
+            <StackPanel x:Name="spInputHeaderCentralArea"
                                 Grid.Row="6"
                                 Width="200"
                                 HorizontalAlignment="Left">
 
-                        <TextBox x:Name="tbInputCentralArea"
+                <TextBox x:Name="tbInputCentralArea"
                                Width="200"
+                                 Height="18"
                              HorizontalAlignment="Left"
-                             FontSize="12">
-                        </TextBox>
+                             FontSize="12"
+                             Style="{StaticResource InputTextBox}">
+                </TextBox>
 
 
-                        <Button x:Name="btnAddHeaderCentralArea"
+                <Button x:Name="btnAddHeaderCentralArea"
                                 Content="+"
                                 HorizontalAlignment="Right"
                                 Margin="0 5 0 0"
                                 FontWeight="DemiBold"
                                 ToolTip="Add header text"
                                 Style="{StaticResource ButtonCircleStyle}">
-                        </Button>
-                    </StackPanel>
+                </Button>
+            </StackPanel>
 
-                </StackPanel>
+        </StackPanel>
 
-                <StackPanel x:Name="spChangeImageHomePage"
+        <StackPanel x:Name="spChangeImageHomePage"
                             Grid.Row="6"
                             Grid.Column="1"
-                            Orientation="Vertical">
-                    <TextBlock x:Name="tbHomePageImage"
+                            Orientation="Vertical"
+                            Margin="18 0 0 0">
+            
+            <TextBlock x:Name="tbHomePageImage"
                                Text="Home page image"
                                FontSize="16"
-                               Margin="10 5 0 5">
+                       Margin="0 0 0 0">
+            </TextBlock>
 
-                    </TextBlock>
+            <Image x:Name="iHomePage"
+                           Width="200"
+                           Height="130"
+                           HorizontalAlignment="Left"></Image>
 
-                    <Image x:Name="iHomePage"
-                           Margin="0 5 10 5"
-                           Width="140"
-                           Height="100"
-                           HorizontalAlignment="Right"></Image>
-
-                    <StackPanel x:Name="spButtunsChangeImage"
+            <StackPanel x:Name="spButtunsChangeImage"
                                 Grid.Row="6"
                                 Grid.Column="1"
                                 Orientation="Horizontal"
-                                HorizontalAlignment="Right"
-                                Margin="0 10 10 10">
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Top"
+                                Margin="0 5 0 5">
 
-                            <Button x:Name="btnChooseImage"
+                <Button x:Name="btnChooseImage"
                                 Content="Choose image"
                                 ToolTip="Choose image"
-                                Style="{StaticResource ButtonStyle}"></Button>
+                                Style="{StaticResource ButtonStyle}"
+                        VerticalContentAlignment="Top"></Button>
 
 
-                        <Button x:Name="btnChangeImage"
+                <Button x:Name="btnChangeImage"
                                 Content="Change"
                                 Margin="10 0 0 0"
                                 ToolTip="Change image"
                                 Style="{StaticResource ButtonStyle}">
-                        </Button>
+                </Button>
 
-                    </StackPanel>
+            </StackPanel>
 
-                </StackPanel>
+        </StackPanel>
 
-                <Border Grid.Row="7"
+        <Border Grid.Row="7"
                         Grid.ColumnSpan="2"
                         Style="{StaticResource BorderStyle}"></Border>
 
-                <StackPanel x:Name="spBottomLeftText"
+        <StackPanel x:Name="spBottomLeftText"
                             Grid.Row="8"
                             Grid.ColumnSpan="2"
                             Orientation="Vertical">
 
-                    <TextBlock x:Name="tbHeaderBottomLeftText"
+            <TextBlock x:Name="tbHeaderBottomLeftText"
                                Text="Bottom header left text"
                                FontSize="16"
-                               Margin="0 5 0 5">
+                               Margin="0 0 0 0">
 
-                    </TextBlock>
+            </TextBlock>
 
-                    <StackPanel x:Name="spInputHeaderBottom"
+            <StackPanel x:Name="spInputHeaderBottom"
                                 Grid.Row="8"
                                 Orientation="Horizontal"
                                 HorizontalAlignment="Left">
 
-                        <TextBox x:Name="tbInputHeaderLeftText"
+                <TextBox x:Name="tbInputHeaderLeftText"
                                Width="300"
+                                 Height="18"
                                FontSize="12"
-                               Text="">
+                               Text=""
+                             Style="{StaticResource InputTextBox}">
+                </TextBox>
 
-                        </TextBox>
-
-                        <Button x:Name="btnChangeBotomLeftText"
+                <Button x:Name="btnChangeBotomLeftText"
                                 Content="Change"
                                 Margin="10 1 2 0"
                                 HorizontalAlignment="Left"
                                 ToolTip="Change header text"
                                 Style="{StaticResource ButtonStyle}"></Button>
-                    </StackPanel>
+            </StackPanel>
 
-                    <TextBlock x:Name="tbHeaderContent"
+            <TextBlock x:Name="tbHeaderContent"
                                Text="Bottom content"
                                FontSize="16"
-                               Margin="0 5 0 5">
+                               Margin="0 0 0 0">
 
-                    </TextBlock>
+            </TextBlock>
 
-                    <StackPanel x:Name="spInputBottomContent"
+            <StackPanel x:Name="spInputBottomContent"
                                 Orientation="Horizontal"
                                 HorizontalAlignment="Left">
 
-                        <TextBox x:Name="tbInputBottomContent"
+                <TextBox x:Name="tbInputBottomContent"
                                Width="300"
                                MinLines="6"
-                               FontSize="12">
+                               FontSize="12"
+                             Style="{StaticResource InputTextBox}">
+                </TextBox>
 
-                        </TextBox>
-
-                        <Button x:Name="btnChangeBotomContent"
+                <Button x:Name="btnChangeBotomContent"
                                 Content="Change"
                                 Margin="10 1 2 0"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
                                 ToolTip="Change bottom content"
                                 Style="{StaticResource ButtonStyle}"></Button>
-                    </StackPanel>
+            </StackPanel>
 
-                </StackPanel>
-            </Grid>
+        </StackPanel>
+    </Grid>
 </UserControl>
